# dedsportfolio

./: Practicum_2.1_Opdrachten - kopie.ipynb  Practicum_2.1_Opdrachten.ipynb  Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.ipynb  datastructuren.ipynb  pyproject.toml  will_visualisatie.pbix
Week 10/: neuralnetwork.ipynb
Week 4/: Dimensietabellen.docx  Dimensietabellen.xlsx  dw.py  warehouse.ipynb  ~$mensietabellen.docx
Week 8/: classificatiemodel.ipynb  regressiemodel.ipynb
Week 9/: unsupervisedcluster.ipynb
week 1/: Practicumopdracht 1 - Mini stageplan.docx  ~$acticumopdracht 1 - Mini stageplan.docx
week 2/: Practicum_2.1_Opdrachten.ipynb  Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.ipynb  Script.ipynb
week 3/: datastructuren.ipynb  sortingalgoritmes.ipynb
